Project page changed a little.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           <li><a href="https://github.com/odises/nopCommercePlugins">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
-      <section>
+      <section style="direction:rtl;">
         <h1>
 <a id="پلاگینها-و-قالبهای-ناپکامرس" class="anchor" href="#%D9%BE%D9%84%D8%A7%DA%AF%DB%8C%D9%86%D9%87%D8%A7-%D9%88-%D9%82%D8%A7%D9%84%D8%A8%D9%87%D8%A7%DB%8C-%D9%86%D8%A7%D9%BE%DA%A9%D8%A7%D9%85%D8%B1%D8%B3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>پلاگین‌ها و قالب‌های ناپ‌کامرس</h1>
 
-<p>Plugins and Templates for nopCommerce. <a href="http://www.nopcommerce.com">http://www.nopcommerce.com</a></p>
+<p style="direction:ltr;">Plugins and Templates for nopCommerce. <a href="http://www.nopcommerce.com">http://www.nopcommerce.com</a></p>
 
 <h3>
 <a id="شما-میتوانید-در-این-پروژه-پلاگین-افزونه-های-زیر-را-بیابید-و-برای-فروشگاه-خود-استفاده-نمایید" class="anchor" href="#%D8%B4%D9%85%D8%A7-%D9%85%DB%8C%D8%AA%D9%88%D8%A7%D9%86%DB%8C%D8%AF-%D8%AF%D8%B1-%D8%A7%DB%8C%D9%86-%D9%BE%D8%B1%D9%88%DA%98%D9%87-%D9%BE%D9%84%D8%A7%DA%AF%DB%8C%D9%86-%D8%A7%D9%81%D8%B2%D9%88%D9%86%D9%87-%D9%87%D8%A7%DB%8C-%D8%B2%DB%8C%D8%B1-%D8%B1%D8%A7-%D8%A8%DB%8C%D8%A7%D8%A8%DB%8C%D8%AF-%D9%88-%D8%A8%D8%B1%D8%A7%DB%8C-%D9%81%D8%B1%D9%88%D8%B4%DA%AF%D8%A7%D9%87-%D8%AE%D9%88%D8%AF-%D8%A7%D8%B3%D8%AA%D9%81%D8%A7%D8%AF%D9%87-%D9%86%D9%85%D8%A7%DB%8C%DB%8C%D8%AF" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>شما می‌توانید در این پروژه پلاگین (افزونه) های زیر را بیابید و برای فروشگاه خود استفاده نمایید:</h3>
