index changed a little.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>nopCommercePlugins by odises</title>
+    <title>nopPlugins by odises</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,16 +15,16 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>nopCommercePlugins</h1>
+        <h1>nopPlugins</h1>
         <p>پلاگین‌ها و قالب‌های ناپ‌کامرس</p>
 
-        <p class="view"><a href="https://github.com/odises/nopCommercePlugins">View the Project on GitHub <small>odises/nopCommercePlugins</small></a></p>
+        <p class="view"><a href="https://github.com/odises/nopPlugins">View the Project on GitHub <small>odises/nopPlugins</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/odises/nopCommercePlugins/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/odises/nopCommercePlugins/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/odises/nopCommercePlugins">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/odises/nopPlugins/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/odises/nopPlugins/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/odises/nopPlugins">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section style="direction:rtl;">
