--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>nopPlugins by odises</title>
-
+    <meta name="keywords" content="پلاگین، ناپ‌کامرس، بانک، افزونه، بانک، فارسی، فروشگاه، سامان، اقتصادنوین، ملت، پاسارگاد، پارسیان">
+    <meta name="description" content="پلاگین‌ها و قالب‌های ناپ‌کامرس. افزونه‌های پرداخت، روش ارسال، بسته زبان فارسی. بانک سامان، اقتصادنوین، ملت، پاسارگاد، پارسیان">
+    <meta name="author" content="رضا احمدی">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
@@ -48,6 +50,7 @@
 <ul>
 <li>بانک سامان</li>
 <li>بانک اقتصادنوین</li>
+<li>بانک ملت</li>
 </ul>
 
 <h5>
@@ -55,7 +58,6 @@
 
 <ul>
 <li>بانک پاسارگاد</li>
-<li>بانک ملت</li>
 <li>بانک پارسیان</li>
 </ul>
       </section>
